--- a/views/events/screeningEventSeries/form.ejs
+++ b/views/events/screeningEventSeries/form.ejs
@@ -24,7 +24,7 @@
                 <div class="form-row">
                     <div class="form-group bmd-form-group col-md-3">
                         <label for="locationId" class="bmd-label-static">
-                            劇場<span class="text-danger">＊</span>
+                            施設<span class="text-danger">＊</span>
                         </label>
                         <select class="form-control" name="locationId">
                             <option value="">選択してください</option>
@@ -126,7 +126,7 @@
                 <div class="form-row">
                     <div class="form-group bmd-form-group col-md-2">
                         <label for="startDate" class="bmd-label-static">
-                            上映開始日<span class="text-danger">＊</span>
+                            開始日<span class="text-danger">＊</span>
                         </label>
                         <input autocomplete="off" class="form-control datepicker" name="startDate" id="startDate"
                             placeholder="" maxlength=10 value="<%= forms.startDate %>">
@@ -139,7 +139,7 @@
 
                     <div class="form-group bmd-form-group col-md-2">
                         <label for="endDate" class="bmd-label-static">
-                            上映終了日<span class="text-danger">＊</span>
+                            終了日<span class="text-danger">＊</span>
                         </label>
                         <input autocomplete="off" class="form-control datepicker" name="endDate" id="endDate"
                             placeholder="" maxlength=10 value="<%= forms.endDate %>">
