--- a/views/events/screeningEventSeries/index.ejs
+++ b/views/events/screeningEventSeries/index.ejs
@@ -1,5 +1,5 @@
 <%- contentFor('title') %>
-劇場上映作品検索
+施設作品検索
 <%- contentFor('displayId') %>
 Aa-3
 <%- contentFor('styles') %>
@@ -31,7 +31,7 @@ Aa-3
                             <div class="form-row">
                                 <div class="form-group bmd-form-group col-md-2">
                                     <label for="locationBranchCode" class="bmd-label-static">
-                                        劇場
+                                        施設
                                     </label>
                                     <select class="form-control" name="locationBranchCode">
                                         <option value="">選択してください</option>
@@ -92,7 +92,7 @@ Aa-3
                             <thead class="text-primary">
                                 <tr>
                                     <th>ID</th>
-                                    <th>劇場</th>
+                                    <th>施設</th>
                                     <th>作品</th>
                                     <th class="text-left">名称</th>
                                     <th>開始</th>
