--- a/views/places/movieTheater/form.ejs
+++ b/views/places/movieTheater/form.ejs
@@ -126,7 +126,7 @@
 
                 <div class="form-group bmd-form-group">
                     <label for="containsPlaceStr" class="bmd-label-static">
-                        スクリーン
+                        ルーム
                     </label>
                     <textarea class="d-none" name="containsPlaceStr">
                     <%-(!isNew) ? forms.containsPlaceStr : JSON.stringify([]) %>
