--- a/views/places/screeningRoom/index.ejs
+++ b/views/places/screeningRoom/index.ejs
@@ -1,5 +1,5 @@
 <%- contentFor('title') %>
-スクリーン検索
+ルーム検索
 <%- contentFor('displayId') %>
 SR-01
 <%- contentFor('styles') %>
@@ -31,7 +31,7 @@ SR-01
                             <div class="form-row">
                                 <div class="form-group bmd-form-group col-md-2">
                                     <label for="containedInPlace[branchCode][$eq]" class="bmd-label-static">
-                                        劇場
+                                        施設
                                     </label>
                                     <select class="form-control" name="containedInPlace[branchCode][$eq]">
                                         <option value="">選択してください</option>
@@ -69,7 +69,7 @@ SR-01
                                 <tr>
                                     <th>コード</th>
                                     <th>名称</th>
-                                    <th>劇場</th>
+                                    <th>施設</th>
                                     <th>アドレス</th>
                                     <th>自由席</th>
                                     <th>追加特性</th>
