--- a/views/places/screeningRoomSection/form.ejs
+++ b/views/places/screeningRoomSection/form.ejs
@@ -33,7 +33,7 @@
                 <div class="form-row">
                     <div class="form-group bmd-form-group col-md-3">
                         <label for="containedInPlace[containedInPlace][branchCode]" class="bmd-label-static">
-                            劇場
+                            施設
                         </label>
                         <% if (isNew) { %>
                         <select class="form-control" name="containedInPlace[containedInPlace][branchCode]">
@@ -66,7 +66,7 @@
 
                     <div class="form-group bmd-form-group col-md-3">
                         <label for="containedInPlace[branchCode]" class="bmd-label-static">
-                            スクリーン
+                            ルーム
                         </label>
                         <% if (isNew) { %>
                         <select class="form-control" name="containedInPlace[branchCode]" id="screenBranchCode"
