--- a/views/places/screeningRoomSection/index.ejs
+++ b/views/places/screeningRoomSection/index.ejs
@@ -1,5 +1,5 @@
 <%- contentFor('title') %>
-スクリーンセクション検索
+ルームセクション検索
 <%- contentFor('displayId') %>
 SRS-01
 <%- contentFor('styles') %>
@@ -32,7 +32,7 @@ SRS-01
                                 <div class="form-group bmd-form-group col-md-2">
                                     <label for="containedInPlace[containedInPlace][branchCode][$eq]"
                                         class="bmd-label-static">
-                                        劇場
+                                        施設
                                     </label>
                                     <select class="form-control"
                                         name="containedInPlace[containedInPlace][branchCode][$eq]">
@@ -47,7 +47,7 @@ SRS-01
 
                                 <div class="form-group bmd-form-group col-md-2">
                                     <label for="containedInPlace[containedInPlace][$eq]" class="bmd-label-static">
-                                        スクリーン
+                                        ルーム
                                     </label>
                                     <select class="form-control" name="containedInPlace[branchCode][$eq]"
                                         id="screenBranchCode" style="width: 100%;">
@@ -80,8 +80,8 @@ SRS-01
                                 <tr>
                                     <th>コード</th>
                                     <th>名称</th>
-                                    <th>劇場</th>
-                                    <th>スクリーン</th>
+                                    <th>施設</th>
+                                    <th>ルーム</th>
                                     <th>追加特性</th>
                                 </tr>
                             </thead>
