--- a/views/places/seat/form.ejs
+++ b/views/places/seat/form.ejs
@@ -28,7 +28,7 @@
                 <div class="form-row">
                     <div class="form-group bmd-form-group col-md-3">
                         <label for="containedInPlace[branchCode]" class="bmd-label-static">
-                            劇場
+                            施設
                         </label>
                         <% if (isNew) { %>
                         <select class="form-control"
@@ -62,7 +62,7 @@
 
                     <div class="form-group bmd-form-group col-md-3">
                         <label for="containedInPlace[branchCode]" class="bmd-label-static">
-                            スクリーン
+                            ルーム
                         </label>
                         <% if (isNew) { %>
                         <select class="form-control" name="containedInPlace[containedInPlace][branchCode]"
