--- a/views/places/seat/index.ejs
+++ b/views/places/seat/index.ejs
@@ -32,7 +32,7 @@ ST-01
                                 <div class="form-group bmd-form-group col-md-2">
                                     <label for="containedInPlace[containedInPlace][containedInPlace][branchCode][$eq]"
                                         class="bmd-label-static">
-                                        劇場
+                                        施設
                                     </label>
                                     <select class="form-control"
                                         name="containedInPlace[containedInPlace][containedInPlace][branchCode][$eq]">
@@ -48,7 +48,7 @@ ST-01
                                 <div class="form-group bmd-form-group col-md-2">
                                     <label for="containedInPlace[containedInPlace][branchCode][$eq]"
                                         class="bmd-label-static">
-                                        スクリーン
+                                        ルーム
                                     </label>
                                     <select class="form-control"
                                         name="containedInPlace[containedInPlace][branchCode][$eq]" id="screenBranchCode"
@@ -83,8 +83,8 @@ ST-01
                             <thead class="text-primary">
                                 <tr>
                                     <th>コード</th>
-                                    <th>劇場</th>
-                                    <th>スクリーン</th>
+                                    <th>施設</th>
+                                    <th>ルーム</th>
                                     <th>セクション</th>
                                     <th>座席区分</th>
                                     <th>追加特性</th>
