--- a/views/places/movieTheater/index.ejs
+++ b/views/places/movieTheater/index.ejs
@@ -1,5 +1,5 @@
 <%- contentFor('title') %>
-劇場
+施設
 <%- contentFor('displayId') %>
 MT-01
 <%- contentFor('styles') %>
@@ -51,7 +51,7 @@ MT-01
                                     <th>電話番号</th>
                                     <th>URL</th>
                                     <th>販売条件</th>
-                                    <th>スクリーン</th>
+                                    <th>ルーム</th>
                                     <th>POS</th>
                                     <th>追加特性</th>
                                 </tr>
@@ -126,7 +126,7 @@ MT-01
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">スクリーン情報</h4>
+                    <h4 class="modal-title">ルーム情報</h4>
                 </div>
                 <div class="modal-body">
                 </div>
