--- a/views/reservations/_dataTables.ejs
+++ b/views/reservations/_dataTables.ejs
@@ -8,10 +8,10 @@
                     <div class="form-row">
                         <div class="form-group bmd-form-group col-md-2">
                             <label for="reservationFor[superEvent][location][id]" class="bmd-label-static">
-                                劇場
+                                施設
                             </label>
                             <select class="form-control" name="reservationFor[superEvent][location][id]">
-                                <option value="">劇場選択</option>
+                                <option value="">施設選択</option>
                                 <% for (let movieTheater of movieTheaters) { %>
                                 <option value="<%= movieTheater.id %>">
                                     <%= movieTheater.name.ja %>
@@ -74,10 +74,10 @@
                             </div>
                             <div class="form-group bmd-form-group col-md-2">
                                 <label for="reservationFor[superEvent][id]" class="bmd-label-static">
-                                    劇場上映作品ID
+                                    施設作品ID
                                 </label>
                                 <input type="text" class="form-control" name="reservationFor[superEvent][id]"
-                                    id="reservationFor[superEvent][id]" placeholder="劇場上映作品ID" />
+                                    id="reservationFor[superEvent][id]" placeholder="施設作品ID" />
                             </div>
                             <div class="form-group bmd-form-group col-md-4">
                                 <label for="reservationFor[startFrom]" class="bmd-label-static">
