--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -263,11 +263,13 @@
                                         時間指定
                                     </a>
                                 </li>
+                                <% if (useAdvancedScheduling) { %>
                                 <li class="nav-item">
                                     <a class="nav-link" data-toggle="tab" href="#link2" role="tablist">
                                         リピートする
                                     </a>
                                 </li>
+                                <% } %>
                             </ul>
 
                             <div class="tab-content">
