--- a/views/creativeWorks/movie/index.ejs
+++ b/views/creativeWorks/movie/index.ejs
@@ -1,5 +1,5 @@
 <%- contentFor('title') %>
-作品検索
+コンテンツ検索
 <%- contentFor('displayId') %>
 Aa-10
 <%- contentFor('styles') %>
@@ -119,7 +119,8 @@ Aa-10
                                     <td name="contentRating">$contentRating$</td>
                                     <td name="distributorName">$distributorName$</td>
                                     <td name="datePublished|date:YYYY-MM-DD HH:mm:ss">$datePublished$</td>
-                                    <td name="offers.availabilityEnds|date:YYYY-MM-DD HH:mm:ss">$offers.availabilityEnds$
+                                    <td name="offers.availabilityEnds|date:YYYY-MM-DD HH:mm:ss">
+                                        $offers.availabilityEnds$
                                     </td>
                                     <td name="identifier__addtionalProperty">
                                         <a href="javascript:void(0)" class="showAdditionalProperty"
