--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -41,7 +41,7 @@
                                 </div>
 
                                 <div class="form-group bmd-form-group col-md-3">
-                                    <label class="bmd-label-static" for="screen">作品
+                                    <label class="bmd-label-static" for="screen">コンテンツ
                                         <span class="text-danger">＊</span></label>
                                     <select class="form-control" name="screeningEventSeriesId">
                                         <option value="">施設を選択してください</option>
