--- a/views/events/screeningEvent/index.ejs
+++ b/views/events/screeningEvent/index.ejs
@@ -62,7 +62,7 @@ Aa-4
 
                                 <div class="form-group bmd-form-group col-md-2">
                                     <label for="superEvent[workPerformed][identifier]" class="bmd-label-static">
-                                        作品
+                                        コンテンツ
                                     </label>
                                     <select class="form-control" name="superEvent[workPerformed][identifier]"
                                         id="superEvent[workPerformed][identifier]" style="width: 100%;">
@@ -145,7 +145,7 @@ Aa-4
                                 <tr>
                                     <th>ID</th>
                                     <th>ステータス</th>
-                                    <th>作品</th>
+                                    <th>コンテンツ</th>
                                     <th>施設</th>
                                     <th>ルーム</th>
                                     <th>開始</th>
