--- a/views/events/screeningEventSeries/form.ejs
+++ b/views/events/screeningEventSeries/form.ejs
@@ -45,7 +45,7 @@
 
                     <div class="form-group bmd-form-group col-md-3">
                         <label for="workPerformed[identifier]" class="bmd-label-static">
-                            作品<span class="text-danger">＊</span>
+                            コンテンツ<span class="text-danger">＊</span>
                         </label>
                         <% if (movie !== undefined) { %>
                         <textarea class="d-none" name="movie"><%= JSON.stringify(movie, null, '\t') %></textarea>
