--- a/views/events/screeningEventSeries/index.ejs
+++ b/views/events/screeningEventSeries/index.ejs
@@ -1,5 +1,5 @@
 <%- contentFor('title') %>
-施設作品検索
+施設コンテンツ検索
 <%- contentFor('displayId') %>
 Aa-3
 <%- contentFor('styles') %>
@@ -51,7 +51,7 @@ Aa-3
                                 </div>
                                 <div class="form-group bmd-form-group col-md-2">
                                     <label for="movieIdentifier" class="bmd-label-static">
-                                        作品
+                                        コンテンツ
                                     </label>
                                     <select class="form-control" name="workPerformed[identifier]"
                                         id="workPerformed[identifier]" style="width: 100%;">
@@ -73,7 +73,7 @@ Aa-3
                                         <label class="form-check-label" for="containsEnded">
                                             <input class="form-check-input" type="checkbox" name="containsEnded"
                                                 value="1" id="containsEnded">
-                                            終了作品を含む
+                                            終了コンテンツを含む
                                             <span class="form-check-sign">
                                                 <span class="check"></span>
                                             </span>
@@ -93,7 +93,7 @@ Aa-3
                                 <tr>
                                     <th>ID</th>
                                     <th>施設</th>
-                                    <th>作品</th>
+                                    <th>コンテンツ</th>
                                     <th class="text-left">名称</th>
                                     <th>開始</th>
                                     <th>終了</th>
