--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -55,7 +55,7 @@
         <li class="nav-item <%= (displayId === 'Aa-10') ? 'active': ''; %>">
             <a class="nav-link" href="/creativeWorks/movie">
                 <i class="material-icons">movie</i>
-                <p>作品</p>
+                <p>コンテンツ(作品)</p>
             </a>
         </li>
 
@@ -77,7 +77,7 @@
                     <li class="nav-item <%= (displayId === 'Aa-3') ? 'active': ''; %>">
                         <a class="nav-link" href="/events/screeningEventSeries">
                             <span class="sidebar-mini"><i class="icon far fa-calendar"></i></span>
-                            <span class="sidebar-normal">施設作品</span>
+                            <span class="sidebar-normal">施設コンテンツ</span>
                         </a>
                     </li>
                     <li class="nav-item <%= (displayId === 'Aa-4') ? 'active': ''; %>">
