--- a/views/reservations/_dataTables.ejs
+++ b/views/reservations/_dataTables.ejs
@@ -21,7 +21,7 @@
                         </div>
                         <div class="form-group bmd-form-group col-md-2">
                             <label for="reservationFor[superEvent][workPerformed][identifier]" class="bmd-label-static">
-                                作品
+                                コンテンツ
                             </label>
                             <select class="form-control" name="reservationFor[superEvent][workPerformed][identifier]"
                                 id="reservationFor[superEvent][workPerformed][identifier]" style="width: 100%;">
@@ -74,10 +74,10 @@
                             </div>
                             <div class="form-group bmd-form-group col-md-2">
                                 <label for="reservationFor[superEvent][id]" class="bmd-label-static">
-                                    施設作品ID
+                                    施設コンテンツID
                                 </label>
                                 <input type="text" class="form-control" name="reservationFor[superEvent][id]"
-                                    id="reservationFor[superEvent][id]" placeholder="施設作品ID" />
+                                    id="reservationFor[superEvent][id]" placeholder="施設コンテンツID" />
                             </div>
                             <div class="form-group bmd-form-group col-md-4">
                                 <label for="reservationFor[startFrom]" class="bmd-label-static">
@@ -252,7 +252,7 @@
                             <th>予約日時</th>
                             <th>ステータス</th>
                             <th>イベント</th>
-                            <th>作品</th>
+                            <th>コンテンツ</th>
                             <th>場所</th>
                             <th>チケット</th>
                             <th>座席</th>
