--- a/views/events/screeningEvent/edit.ejs
+++ b/views/events/screeningEvent/edit.ejs
@@ -13,7 +13,7 @@
                         <form>
                             <div class="form-row">
                                 <div class="form-group bmd-form-group col-md-4 film">
-                                    <label class="bmd-label-static" for="doorTime">作品</label>
+                                    <label class="bmd-label-static" for="doorTime">コンテンツ</label>
                                     <input class="form-control" disabled type="text">
                                 </div>
                             </div>
