### Added - イベントに予約集計ボタンを追加

--- a/views/events/screeningEvent/index.ejs
+++ b/views/events/screeningEvent/index.ejs
@@ -184,17 +184,17 @@ Aa-4
                                         $remainingAttendeeCapacity$ / $maximumAttendeeCapacity$</td>
                                     <td
                                         name="aggregateReservation.aggregateDate|date:YYYY/MM/DD HH:mm:ss__aggregateReservation.reservationCount">
-                                        <a href="#" data-toggle="tooltip"
+                                        <a href="javascript:void(0)"
                                             title="集計日時:$aggregateReservation.aggregateDate$">$aggregateReservation.reservationCount$</a>
                                     </td>
                                     <td
                                         name="aggregateReservation.aggregateDate|date:YYYY/MM/DD HH:mm:ss__aggregateReservation.checkInCount">
-                                        <a href="#" data-toggle="tooltip"
+                                        <a href="javascript:void(0)"
                                             title="集計日時:$aggregateReservation.aggregateDate$">$aggregateReservation.checkInCount$</a>
                                     </td>
                                     <td
                                         name="aggregateReservation.aggregateDate|date:YYYY/MM/DD HH:mm:ss__aggregateReservation.attendeeCount">
-                                        <a href="#" data-toggle="tooltip"
+                                        <a href="javascript:void(0)"
                                             title="集計日時:$aggregateReservation.aggregateDate$">$aggregateReservation.attendeeCount$</a>
                                     </td>
                                     <td name="hasOfferCatalog.id__hasOfferCatalog.id">
