--- a/views/events/screeningEvent/show.ejs
+++ b/views/events/screeningEvent/show.ejs
@@ -11,8 +11,9 @@
                         <i class="material-icons" style="font-size: 1.4em;">more_vert</i>
                         <div class="ripple-container"></div>
                     </a>
-                    <div class="dropdown-menu dropdown-menu-right">
+                    <div class="dropdown-menu">
                         <a href="javascript:void(0)" class="dropdown-item reserve">予約する</a>
+                        <a href="javascript:void(0)" class="dropdown-item aggregateReservation">予約集計</a>
                     </div>
                 </div>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
