--- a/views/transactions/reserve/confirm.ejs
+++ b/views/transactions/reserve/confirm.ejs
@@ -18,9 +18,9 @@ RT-00
     <div class="card-body">
         <dl class="row">
             <% const firstReservation = transaction.object.acceptedOffer[0].itemOffered.serviceOutput; %>
-            <dt class="col-md-2">取引ID</dt>
-            <dd class="col-md-10"><%= transaction.id %></dd>
-            <dt class="col-md-2">名称</dt>
+            <dt class="col-md-2">取引番号</dt>
+            <dd class="col-md-10"><%= transaction.transactionNumber %></dd>
+            <dt class="col-md-2">イベント名称</dt>
             <dd class="col-md-10"><%= event.name.ja %></dd>
             <dt class="col-md-2">期間</dt>
             <dd class="col-md-10">
@@ -28,9 +28,11 @@ RT-00
                 -
                 <%= moment(event.endDate).tz('Asia/Tokyo').format('YYYY-MM-DD HH:mm') %>
             </dd>
-            <dt class="col-md-2">場所</dt>
-            <dd class="col-md-10"><%= event.superEvent.location.name.ja%> <%= event.location.name.ja %></dd>
-            <dt class="col-md-2">座席セクション</dt>
+            <dt class="col-md-2">施設</dt>
+            <dd class="col-md-10"><%= event.superEvent.location.name.ja%></dd>
+            <dt class="col-md-2">ルーム</dt>
+            <dd class="col-md-10"><%= event.location.name.ja %></dd>
+            <dt class="col-md-2">セクション</dt>
             <dd class="col-md-10">
                 <% if (firstReservation.reservedTicket.ticketedSeat !== undefined) { %>
                 <%= firstReservation.reservedTicket.ticketedSeat.seatSection %>
@@ -54,7 +56,7 @@ RT-00
 
     <!-- form start -->
     <div class="card-footer">
-        <form role="form" method="post" action="/transactions/reserve/<%= transaction.id %>/cancel">
+        <form role="form" method="post" action="/transactions/reserve/<%= transaction.transactionNumber %>/cancel">
             <button type="submit" class="btn btn-default">中止</button>
         </form>
 
