### Added - 劇場に親組織を追加

--- a/views/places/movieTheater/index.ejs
+++ b/views/places/movieTheater/index.ejs
@@ -53,6 +53,7 @@ MT-01
                                     <th>販売条件</th>
                                     <th>ルーム</th>
                                     <th>POS</th>
+                                    <th>親組織</th>
                                     <th>追加特性</th>
                                 </tr>
                             </thead>
@@ -81,7 +82,8 @@ MT-01
                                         </a>
                                     </td>
                                     <td name="posCount">$posCount$</td>
-                                    <td name="branchCode" class="">
+                                    <td name="parentOrganizationName"">$parentOrganizationName$</td>
+                                    <td name=" branchCode" class="">
                                         <a href="javascript:void(0)" class="showAdditionalProperty"
                                             data-branchCode="$branchCode$">
                                             <span>表示</span>
