--- a/views/places/movieTheater/form.ejs
+++ b/views/places/movieTheater/form.ejs
@@ -51,77 +51,101 @@
                         <% } %>
                     </div>
 
+                    <div class="form-group bmd-form-group col-md-3">
+                        <label for="containedInPlace[branchCode]" class="bmd-label-static">
+                            親組織<span class="text-danger">＊</span>
+                        </label>
+                        <select class="form-control" name="parentOrganization[id]">
+                            <option value="">選択してください</option>
+                            <% for (const seller of sellers) { %>
+                            <option value="<%= seller.id %>"
+                                <% if (forms.parentOrganization !== undefined && seller.id === forms.parentOrganization.id) { %>
+                                selected<% } %>>
+                                <%= seller.name.ja %>
+                            </option>
+                            <% } %>
+                        </select>
+                        <% if (errors && errors['parentOrganization.id']) { %>
+                        <span class="bmd-help text-danger d-block">
+                            <%- errors['parentOrganization.id'].msg %>
+                        </span>
+                        <% } %>
+                    </div>
                 </div>
 
-                <div class="form-group bmd-form-group">
-                    <label for="name[ja]" class="bmd-label-static">
-                        名称<span class="text-danger">＊</span>
-                    </label>
-                    <input class="form-control" name="name[ja]" id="name[ja]" placeholder="" maxlength="64"
-                        value="<%= forms.name.ja %>">
-                    <span class="bmd-help">全角64文字以内でご入力ください</span>
-                    <% if (errors && errors['name.ja']) { %>
-                    <span class="bmd-help text-danger d-block">
-                        <%- errors['name.ja'].msg %>
-                    </span>
-                    <% } %>
+                <div class="form-row">
+                    <div class="form-group bmd-form-group col-md-3">
+                        <label for="name[ja]" class="bmd-label-static">
+                            名称<span class="text-danger">＊</span>
+                        </label>
+                        <input class="form-control" name="name[ja]" id="name[ja]" placeholder="" maxlength="64"
+                            value="<%= forms.name.ja %>">
+                        <span class="bmd-help">全角64文字以内でご入力ください</span>
+                        <% if (errors && errors['name.ja']) { %>
+                        <span class="bmd-help text-danger d-block">
+                            <%- errors['name.ja'].msg %>
+                        </span>
+                        <% } %>
+                    </div>
+
+                    <div class="form-group bmd-form-group col-md-3">
+                        <label for="name[en]" class="bmd-label-static">
+                            英語名称
+                        </label>
+                        <input class="form-control" name="name[en]" id="name[en]" placeholder="" maxlength="64"
+                            value="<%= forms.name.en %>">
+                        <span class="bmd-help">半角64文字以内でご入力ください</span>
+                        <% if (errors && errors['name.en']) { %>
+                        <span class="bmd-help text-danger d-block">
+                            <%- errors['name.en'].msg %>
+                        </span>
+                        <% } %>
+                    </div>
+
+                    <div class="form-group bmd-form-group col-md-3">
+                        <label for="kanaName" class="bmd-label-static">
+                            カナ名称
+                        </label>
+                        <input class="form-control" name="kanaName" id="kanaName" placeholder="" maxlength="64"
+                            value="<%= forms.kanaName %>">
+                        <span class="bmd-help">全角64文字以内でご入力ください</span>
+                        <% if (errors && errors.kanaName) { %>
+                        <span class="bmd-help text-danger d-block">
+                            <%- errors.kanaName.msg %>
+                        </span>
+                        <% } %>
+                    </div>
                 </div>
 
-                <div class="form-group bmd-form-group">
-                    <label for="name[en]" class="bmd-label-static">
-                        英語名称
-                    </label>
-                    <input class="form-control" name="name[en]" id="name[en]" placeholder="" maxlength="64"
-                        value="<%= forms.name.en %>">
-                    <span class="bmd-help">半角64文字以内でご入力ください</span>
-                    <% if (errors && errors['name.en']) { %>
-                    <span class="bmd-help text-danger d-block">
-                        <%- errors['name.en'].msg %>
-                    </span>
-                    <% } %>
-                </div>
+                <div class="form-row">
+                    <div class="form-group bmd-form-group col-md-3">
+                        <label for="telephone" class="bmd-label-static">
+                            電話番号
+                        </label>
+                        <input type="tel" class="form-control" name="telephone" id="telephone" placeholder=""
+                            maxlength=64 value="<%= forms.telephone %>">
+                        <% if (errors && errors.telephone) { %>
+                        <span class="bmd-help text-danger d-block">
+                            <%- errors.telephone.msg %>
+                        </span>
+                        <% } %>
+                    </div>
 
-                <div class="form-group bmd-form-group">
-                    <label for="kanaName" class="bmd-label-static">
-                        カナ名称
-                    </label>
-                    <input class="form-control" name="kanaName" id="kanaName" placeholder="" maxlength="64"
-                        value="<%= forms.kanaName %>">
-                    <span class="bmd-help">全角64文字以内でご入力ください</span>
-                    <% if (errors && errors.kanaName) { %>
-                    <span class="bmd-help text-danger d-block">
-                        <%- errors.kanaName.msg %>
-                    </span>
-                    <% } %>
+                    <div class="form-group bmd-form-group col-md-6">
+                        <label for="url" class="bmd-label-static">
+                            URL
+                        </label>
+                        <input type="tel" class="form-control" name="url" id="url" placeholder="" maxlength=256
+                            value="<%= forms.url %>">
+                        <% if (errors && errors.url) { %>
+                        <span class="bmd-help text-danger d-block">
+                            <%- errors.url.msg %>
+                        </span>
+                        <% } %>
+                    </div>
                 </div>
-
-                <div class="form-group bmd-form-group">
-                    <label for="telephone" class="bmd-label-static">
-                        電話番号
-                    </label>
-                    <input type="tel" class="form-control" name="telephone" id="telephone" placeholder="" maxlength=64
-                        value="<%= forms.telephone %>">
-                    <% if (errors && errors.telephone) { %>
-                    <span class="bmd-help text-danger d-block">
-                        <%- errors.telephone.msg %>
-                    </span>
-                    <% } %>
-                </div>
-
-                <div class="form-group bmd-form-group">
-                    <label for="url" class="bmd-label-static">
-                        URL
-                    </label>
-                    <input type="tel" class="form-control" name="url" id="url" placeholder="" maxlength=256
-                        value="<%= forms.url %>">
-                    <% if (errors && errors.url) { %>
-                    <span class="bmd-help text-danger d-block">
-                        <%- errors.url.msg %>
-                    </span>
-                    <% } %>
-                </div>
-
             </div>
+
             <div class="tab-pane" id="link2">
 
                 <div class="form-group bmd-form-group">
