--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -18,24 +18,14 @@
                                     </label>
                                     <select class="form-control" name="theater">
                                         <option value="0" disabled selected> 選択してください</option>
-                                        <% if (user.cognitoGroups.movieTheaters === undefined || user.cognitoGroups.movieTheaters.length === 0) { %>
                                         <% for (const movieTheater of movieTheaters) { %>
                                         <option value="<%= movieTheater.id %>"
                                             data-max-seat-number="<%= movieTheater.offers.eligibleQuantity.maxValue %>"
                                             data-sale-start-days="<%= -movieTheater.offers.availabilityStartsGraceTime.value %>"
                                             data-end-sale-time="<%= Math.floor(movieTheater.offers.availabilityEndsGraceTime.value / 60) %>"
-                                            data-name="<%= movieTheater.name.ja %>">
+                                            data-name="<%= movieTheater.name.ja %>"
+                                            data-seller="<%= (movieTheater.parentOrganization !== undefined) ? movieTheater.parentOrganization.id : '' %>">
                                             <%= movieTheater.name.ja %></option>
-                                        <% } %>
-                                        <% } else { %>
-                                        <% for (const movieTheater of user.cognitoGroups.movieTheaters) { %>
-                                        <option value="<%= movieTheater.id %>"
-                                            data-max-seat-number="<%= movieTheater.offers.eligibleQuantity.maxValue %>"
-                                            data-sale-start-days="<%= -movieTheater.offers.availabilityStartsGraceTime.value %>"
-                                            data-end-sale-time="<%= Math.floor(movieTheater.offers.availabilityEndsGraceTime.value / 60) %>">
-                                            <%= movieTheater.name.ja %>
-                                        </option>
-                                        <% } %>
                                         <% } %>
                                     </select>
                                 </div>
