### Changed - プロダクト検索の汎用性拡張

--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -140,7 +140,7 @@
                     </li> -->
 
                     <li class="nav-item <%= (displayId === 'PR-00') ? 'active': ''; %>">
-                        <a class="nav-link" href="/products">
+                        <a class="nav-link" href="/products?typeOf=Product">
                             <span class="sidebar-mini"><i class="material-icons">local_drink</i></span>
                             <span class="sidebar-normal">アドオン</span>
                         </a>
