--- a/views/ticketType/form.ejs
+++ b/views/ticketType/form.ejs
@@ -544,9 +544,8 @@
                         </a>
 
                         <div class="collapse" id="editNameJson">
-                            <textarea class="form-control" name="nameStr" rows=10>
-                            <%= JSON.stringify(forms.name, null, '\t') %>
-                            </textarea>
+                            <textarea class="form-control" name="nameStr"
+                                rows=20><%= JSON.stringify(forms.name, null, '\t') %></textarea>
                         </div>
                     </div>
                 </div>
