--- a/views/products/form.ejs
+++ b/views/products/form.ejs
@@ -23,7 +23,27 @@
                 <input type="hidden" name="id" value="<%= forms.id %>">
 
                 <div class="form-row">
-                    <div class="form-group bmd-form-group col-md-6">
+                    <div class="form-group bmd-form-group col-md-3">
+                        <label for="typeOf" class="bmd-label-static">
+                            プロダクトタイプ<span class="text-danger">＊</span>
+                        </label>
+
+                        <select class="form-control" name="typeOf">
+                            <% productTypes.forEach((productType) => { %>
+                            <option value="<%= productType.codeValue %>"
+                                <% if (forms.typeOf === productType.codeValue) { %> selected<% } %>>
+                                <%= productType.name %></option>
+                            <% }) %>
+                        </select>
+
+                        <% if (errors && errors['typeOf']) { %>
+                        <span class="bmd-help text-danger d-block">
+                            <%- errors['typeOf'].msg %>
+                        </span>
+                        <% } %>
+                    </div>
+
+                    <div class="form-group bmd-form-group col-md-3">
                         <label for="name[ja]" class="bmd-label-static">
                             名称<span class="text-danger">＊</span>
                         </label>
@@ -38,7 +58,7 @@
                         <% } %>
                     </div>
 
-                    <div class="form-group bmd-form-group col-md-6">
+                    <div class="form-group bmd-form-group col-md-3">
                         <label for="hasOfferCatalog[id]" class="bmd-label-static">
                             オファーカタログ
                         </label>
