### Changed - プロダクト編集にserviceOutputを追加

--- a/views/products/form.ejs
+++ b/views/products/form.ejs
@@ -16,6 +16,11 @@
                     基本設定
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" data-toggle="tab" href="#link4" role="tablist">
+                    高度な設定
+                </a>
+            </li>
         </ul>
 
         <div class="tab-content">
@@ -76,6 +81,25 @@
                 </div>
             </div>
             <div class="tab-pane" id="link2">
+            </div>
+
+            <div class="tab-pane" id="link4">
+                <div class="form-row">
+                    <div class="form-group bmd-form-group col-md-12">
+                        <label for="" class="bmd-label-static">
+                            Service Output
+                        </label>
+                        <a class="d-block pt-1" data-toggle="collapse" href="#editServiceOutputJson" role="button"
+                            aria-expanded="false" aria-controls="editServiceOutputJson">
+                            編集する
+                        </a>
+
+                        <div class="collapse" id="editServiceOutputJson">
+                            <textarea class="form-control" name="serviceOutputStr"
+                                rows=20><%= JSON.stringify(forms.serviceOutput, null, '\t') %></textarea>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
