### Changed - プロダクトタイプ名称を調整

--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -135,7 +135,7 @@
                     <!-- <li class="nav-item <%= (displayId === 'MS-00') ? 'active': ''; %>">
                         <a class="nav-link" href="/services/membershipService">
                             <span class="sidebar-mini"><i class="material-icons">card_membership</i></span>
-                            <span class="sidebar-normal">会員サービス</span>
+                            <span class="sidebar-normal">メンバーシップ</span>
                         </a>
                     </li> -->
 
