### Changed - プロダクト管理を汎用的に調整

--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -31,7 +31,7 @@ PR-00
                             <div class="form-row">
                                 <div class="form-group bmd-form-group col-md-2">
                                     <label for="typeOf[$eq]" class="bmd-label-static">
-                                        アイテム
+                                        タイプ
                                     </label>
                                     <select class="form-control" name="typeOf[$eq]">
                                         <% productTypes.forEach((productType) => { %>
