--- a/views/offers/form.ejs
+++ b/views/offers/form.ejs
@@ -192,6 +192,33 @@
                 </div>
 
                 <div class="form-row">
+                    <div class="form-group bmd-form-group col-md-12">
+                        <label for="availableAtOrFrom[][id]" class="bmd-label-static">
+                            利用状況
+                        </label>
+
+                        <% applications.forEach((application) => { %>
+                        <%
+                        let checked = false;
+                        if (Array.isArray(forms.availableAtOrFrom) && forms.availableAtOrFrom.some((a)=>a.id === application.id)) {
+                            checked = true;
+                        }
+                        %>
+                        <div class="form-check form-check-inline">
+                            <label class="form-check-label">
+                                <input class="form-check-input" type="checkbox" <% if (checked) { %> checked="checked"
+                                    <% } %> value="<%= application.id %>"
+                                    name="availableAtOrFrom[id]"><%= application.name %>
+                                <span class="form-check-sign">
+                                    <span class="check"></span>
+                                </span>
+                            </label>
+                        </div>
+                        <% }) %>
+                    </div>
+                </div>
+
+                <div class="form-row">
                     <div class="form-group bmd-form-group col-md-6">
                         <label for="description[ja]" class="bmd-label-static">
                             補足説明
