--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -52,7 +52,7 @@ PR-00
                             aria-describedby="datatables_info">
                             <thead class="text-primary">
                                 <tr>
-                                    <th>ID</th>
+                                    <th>プロダクトID</th>
                                     <th>名称</th>
                                     <th>カタログ</th>
                                     <th>ServiceOutput</th>
@@ -60,9 +60,9 @@ PR-00
                             </thead>
                             <tbody>
                                 <tr id="templateRow">
-                                    <td name="id__id">
+                                    <td name="id__productID">
                                         <a target="_blank" href="/products/$id$">
-                                            $id$
+                                            $productID$
                                             <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
                                         </a>
                                     </td>
